// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseSummary Component 1`] = `
<div>
  Viewing 
  3
   expense
  <span>
    s
  </span>
   totalling 
  $1,140.02
</div>
`;

exports[`Should render total from a single entry 1`] = `
<div>
  Viewing 
  1
   expense
   totalling 
  $0.02
</div>
`;

exports[`Should render with an empty array 1`] = `
<div>
  Viewing 
  0
   expense
  <span>
    s
  </span>
   totalling 
  $0.00
</div>
`;
